Fixes entry footer alignment

--- a/source/scss/custom/_custom.scss
+++ b/source/scss/custom/_custom.scss
@@ -47,7 +47,7 @@
     }
 
     .entry-footer {
-        .container {
+        :first-child(.container) {
             text-align: center;
         }
         img {
